--- a/templates/detail.html
+++ b/templates/detail.html
@@ -13,14 +13,19 @@
                     <h3>{{ object.title }}</h3>
                     <div class="row">
                         <div class="col">
-                            {% with ''|center:object.rating as range %}
-                            {% for s in range %}
-                                <span><i class="fa fa-star text-warning"></i></span>
-                            {% endfor %}
+                            {% with ''|center:5 as range %}
+                            {% for _ in range %}
+                                <span><i class="fa fa-star 
+                                {% if forloop.counter <= object.rating %}
+                                    text-warning
+                                {% else %}
+                                    text-secondary
+                                {% endif %}"></i></span>
+                            {% endfor %}    
                             {% endwith %}
                         </div>
                         <div class="col">
-                            <span class="text-muted">135 reviews</span>
+                            <span class="text-muted">{{ object.reviews }} reviews</span>
                         </div>
                         <div class="col">
                             <span class="text-success"><i class="fas fa-check-square"></i> 145 orders</span>
@@ -50,43 +55,36 @@
                                     {{ object.stock }}
                                 </td>
                             </tr>
+                            <tr>
+                                <td>Rating</td>
+                                <td>
+                                    <form method="POST" action="{% url 'add_to_cart' object.pk %}">
+                                        {% csrf_token %}
+                                    <div class="star-rating">
+                                        {% with ''|center:5 as range %}
+                                        {% for _ in range %}
+                                            <input id="star-{{ forloop.revcounter }}" type="radio" name="rating" value="{{ forloop.revcounter }}">
+                                            <label for="star-{{ forloop.revcounter }}" title="5 stars">
+                                              <i class="active fa fa-star" aria-hidden="true"></i>
+                                            </label>
+                                        {% endfor %}
+                                        {% endwith %}
+                                    </div>
+                                    <br>
+                                    <small>
+                                        Please rate this product.
+                                    </small>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
-                    {% if object.category == "Fashions" %}
-                    <p class="pb-2">Select Size:</p>
-                    <div class="row mb-3">
-                        <div class="col">
-                            <form>
-                                <div class="custom-control custom-checkbox">
-                                  <input type="checkbox" class="custom-control-input" id="S" name="example1">
-                                  <label class="custom-control-label font-weight-bold" for="S">S</label>
-                                </div>
-                              </form>
-                        </div>
-                        <div class="col">
-                            <form>
-                                <div class="custom-control custom-checkbox">
-                                  <input type="checkbox" class="custom-control-input" id="M" name="example1">
-                                  <label class="custom-control-label font-weight-bold" for="M">M</label>
-                                </div>
-                              </form>
-                        </div>
-                        <div class="col">
-                            <form>
-                                <div class="custom-control custom-checkbox">
-                                  <input type="checkbox" class="custom-control-input" id="L" name="example1">
-                                  <label class="custom-control-label font-weight-bold" for="L">L</label>
-                                </div>
-                              </form>
-                        </div>
-                    </div>
-                    {% endif %}
                     <div class="row py-3 card-footer">
                         <div class="col">
                             <button class="btn btn-success btn-sm container"><i class="fa fa-credit-card"></i> Buy Now</button>
                         </div>
                         <div class="col">
-                            <a href="{% url 'add_to_cart' object.pk %}" class="btn btn-outline-success btn-sm container"><i class="fa fa-shopping-cart"></i> Add to cart</a>
+                            <button type="submit" class="btn btn-outline-success btn-sm container"><i class="fa fa-shopping-cart"></i> Add to cart</button>
+                        </form>
                         </div>
                     </div>
                 </div>
