--- a/templates/order.html
+++ b/templates/order.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load mathfilters %}
 
 {% block content %}
     <section class="container py-5">
@@ -7,63 +8,29 @@
             <div class="card-body">
                 <h5><i class="fa fa-shopping-cart"></i> Review cart</h5>
                 <div class="row">
+                    {% for item in object.item.all %}
                     <div class="col-sm-6 py-3">
                         <div class="row">
                             <div class="col-sm-2">
-                                <img src="{% static 'images/1.jpg' %}" alt="image1" height="50" class="border">
+                                <img src="{{ item.product.image.url }}" alt="image1" height="50" class="border">
                             </div>
                             <div class="col-sm-10">
-                                Blue-Jacket Rhapsodi
+                                {{ item.product.title }}
                                 <br>
-                                2x $290 = Total: $430
+                                {{ item.quantity}}x ${{ item.product.price }} = Total: ${{ item.quantity|mul:item.product.price }}
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 py-3">
-                        <div class="row">
-                            <div class="col-sm-2">
-                                <img src="{% static 'images/1.jpg' %}" alt="image1" height="50" class="border">
-                            </div>
-                            <div class="col-sm-10">
-                                Blue-Jacket Rhapsodi
-                                <br>
-                                2x $290 = Total: $430
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 py-3">
-                        <div class="row">
-                            <div class="col-sm-2">
-                                <img src="{% static 'images/1.jpg' %}" alt="image1" height="50" class="border">
-                            </div>
-                            <div class="col-sm-10">
-                                Blue-Jacket Rhapsodi
-                                <br>
-                                2x $290 = Total: $430
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 py-3">
-                        <div class="row">
-                            <div class="col-sm-2">
-                                <img src="{% static 'images/1.jpg' %}" alt="image1" height="50" class="border">
-                            </div>
-                            <div class="col-sm-10">
-                                Blue-Jacket Rhapsodi
-                                <br>
-                                2x $290 = Total: $430
-                            </div>
-                        </div>
-                    </div>
+                    {% endfor %}
                 </div>
                 <div class="dropdown-divider"></div>
                 <div class="row">
                     <div class="col-sm-8"><span class="font-weight-bold">Subtotal:</span></div>
                     <div class="col-sm-2 text-right">
-                       <span class="text-muted">2 items</span>
+                       <span class="text-muted">{{ object.item.count }} items</span>
                     </div>
                     <div class="col-sm-2 text-right">
-                       <span class="font-weight-bold">$1,569</span>
+                       <span class="font-weight-bold">${{ total }}</span>
                     </div>
                 </div>
                 <div class="row">
@@ -71,8 +38,9 @@
                     <div class="col-sm-2 text-right">
                        <span class="text-muted">10% offer</span>
                     </div>
+                    {% load humanize %}
                     <div class="col-sm-2 text-right">
-                       <span class="font-weight-bold text-danger">$29</span>
+                       <span class="font-weight-bold text-danger">${{ discount|floatformat:2 }}</span>
                     </div>
                 </div>
                 <div class="row">
@@ -81,22 +49,22 @@
                        <span class="text-muted">5%</span>
                     </div>
                     <div class="col-sm-2 text-right">
-                       <span class="font-weight-bold text-success">$7</span>
+                       <span class="font-weight-bold text-success">${{ tax|floatformat:2 }}</span>
                     </div>
                 </div>
                 <div class="row py-2">
                     <div class="col-sm-8"><span class="font-weight-bold">Total:</span></div>
                     <div class="col-sm-4 text-right">
-                       <h5>$1,547</h5>
+                       <h5>${{ total_all|floatformat:2 }}</h5>
                     </div>
                 </div>
                 <hr>
                 <div class="row">
                     <div class="col">
-                        <button class="btn btn-primary btn-sm container"><i class="fa fa-hand-holding-usd"></i> Payment</button>
+                        <a href="{% url 'payment' %}" class="btn btn-primary btn-sm container"><i class="fa fa-hand-holding-usd"></i> Payment</a>
                     </div>
                     <div class="col">
-                        <button class="btn btn-danger btn-sm container"><i class="fa fa-undo"></i> Cancel</button>
+                        <a href="{% url 'cart' %}" class="btn btn-danger btn-sm container"><i class="fa fa-undo"></i> Cancel</a>
                     </div>
                 </div>
             </div>
