--- a/templates/search.html
+++ b/templates/search.html
@@ -3,9 +3,9 @@
 {% block content %}
 <section class="container py-5">
   {% if query == ""%}
-  <h3>Result of "ALL"</h3>
+  <h3>Result for "ALL"</h3>
   {% else %}
-  <h3>Result of "{{ query }}"</h3>
+  <h3>Result for "{{ query }}"</h3>
   {% endif %}
   <hr>
   {% if search.exists == False %}
